# bike-trainer-rs

./: Cargo.toml
src/: app.rs  main.rs  trainer.rs
