[package]
name = "wahoo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluest = { path = "../bluest" }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-lite = "1.13"
rand = "0.8"
eframe = "0.23"
egui_plot = "0.23"
